# humanoid_robo

./: .gitmodules  README.md
arduino/: Hubert_DemoApp_ROS2_ver1.ino
arduino/Hubert_DemoApp_ROS2_ver1/: Hubert_DemoApp_ROS2_ver1.ino
arduino/Hubert_DemoApp_ROS2_ver1_multi/: Hubert_DemoApp_ROS2_ver1_multi.ino
computer_vision/: detect_foam.py  get_transform_function_for_vertical_plane_coord_to_base_frame_coord.py  main.py  print_hsv_value_from_image.py  save_images_from_camera.py  show_camera_feed.py  test.py  trackbar_1.py
computer_vision/CameraCalibration/: make_camera_calibration.py  save_images.py
src/cpp_move_goal/: CMakeLists.txt  package.xml
src/cpp_move_goal/launch/: move_hubert.launch.py  try.launch.py
src/cpp_move_goal/src/: move_hubert.cpp  moveit_trial.cpp  robot_kine.cpp  tutorial.cpp
src/hubert_group_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/hubert_group_moveit/config/: hubert.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/hubert_group_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/hubert_grp/: .setup_assistant  CMakeLists.txt  package.xml
src/hubert_grp/config/: hubert.ros2_control.xacro  hubert.srdf  hubert.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/hubert_grp/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/hubert_grp/urdf/: hubert.urdf
src/hubert_hubert_arm_ikfast_plugin/: CMakeLists.txt  hubert_hubert_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/hubert_hubert_arm_ikfast_plugin/src/: hubert_hubert_arm_ikfast_moveit_plugin.cpp  hubert_hubert_arm_ikfast_solver.cpp
src/hubert_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/hubert_moveit/config/: hubert.srdf  hubert.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/hubert_moveit/launch/: demo.launch.py  move_group.launch.py  (+6 more)
src/move_ee/: package.xml  setup.cfg  setup.py
src/pls_work/: .setup_assistant  CMakeLists.txt  package.xml
urdf/: hubert.urdf
(+16 files in other folders)
